<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jilson.musicalstructureapp.AlbumsActivity">

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/songs_text_view"
            style="@style/MenuTextStyle"
            android:text="@string/songs"/>

        <TextView
            android:id="@+id/albums_text_view"
            style="@style/MenuTextStyle"
            android:background="@color/ColorWhenSelected"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/albums"/>

        <TextView
            android:id="@+id/artists_text_view"
            style="@style/MenuTextStyle"
            android:text="@string/artists"/>

        <TextView
            android:id="@+id/genres_text_view"
            style="@style/MenuTextStyle"
            android:text="@string/genres"/>
    </LinearLayout>

    <ScrollView
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/albumcover1"/>

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/albumcover2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/albumcover3"/>

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/albumcover4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/albumcover5"/>

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/albumcover6"/>

            </LinearLayout>





        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:gravity="end">

        <TextView
            android:id="@+id/now_playing_text_view"
            style="@style/MusicControlLibrary"
            android:text="@string/song_1"/>

        <ImageButton
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/previous"/>


        <ImageButton
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:background="@drawable/play"/>


        <ImageButton
            android:layout_width="54dp"
            android:layout_margin="4dp"
            android:background="@drawable/next"
            android:layout_height="wrap_content"/>



    </LinearLayout>

</LinearLayout>
